@@ -5656,9 +5656,7 @@ operator|.
 name|getHostPort
 argument_list|()
 argument_list|,
-name|ZkContainer
-operator|.
-name|DEFAULT_HOST_PORT
+literal|null
 argument_list|)
 expr_stmt|;
 name|addCoresAttrib
@@ -5705,9 +5703,7 @@ operator|.
 name|getHostContext
 argument_list|()
 argument_list|,
-name|ZkContainer
-operator|.
-name|DEFAULT_HOST_CONTEXT
+literal|null
 argument_list|)
 expr_stmt|;
 name|addCoresAttrib
