@@ -297,26 +297,6 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
-comment|/** @deprecated will be remove in Solr 5.0 (SOLR-4622) */
-DECL|field|DEFAULT_HOST_CONTEXT
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|DEFAULT_HOST_CONTEXT
-init|=
-literal|"solr"
-decl_stmt|;
-comment|/** @deprecated will be remove in Solr 5.0 (SOLR-4622) */
-DECL|field|DEFAULT_HOST_PORT
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|DEFAULT_HOST_PORT
-init|=
-literal|"8983"
-decl_stmt|;
 DECL|field|zkController
 specifier|protected
 name|ZkController
@@ -581,7 +561,6 @@ literal|null
 condition|)
 return|return;
 comment|// not in zk mode
-comment|// BEGIN: SOLR-4622: deprecated hardcoded defaults for hostPort& hostContext
 if|if
 condition|(
 literal|null
@@ -589,23 +568,19 @@ operator|==
 name|hostPort
 condition|)
 block|{
-comment|// throw new ZooKeeperException(SolrException.ErrorCode.SERVER_ERROR,
-comment|//               "'hostPort' must be configured to run SolrCloud");
-name|log
-operator|.
-name|warn
+throw|throw
+operator|new
+name|ZooKeeperException
 argument_list|(
-literal|"Solr 'hostPort' has not be explicitly configured, using hardcoded default of "
-operator|+
-name|DEFAULT_HOST_PORT
-operator|+
-literal|".  This default has been deprecated and will be removed in future versions of Solr, please configure this value explicitly"
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"'hostPort' must be configured to run SolrCloud"
 argument_list|)
-expr_stmt|;
-name|hostPort
-operator|=
-name|DEFAULT_HOST_PORT
-expr_stmt|;
+throw|;
 block|}
 if|if
 condition|(
@@ -614,25 +589,20 @@ operator|==
 name|hostContext
 condition|)
 block|{
-comment|// throw new ZooKeeperException(SolrException.ErrorCode.SERVER_ERROR,
-comment|//               "'hostContext' must be configured to run SolrCloud");
-name|log
-operator|.
-name|warn
+throw|throw
+operator|new
+name|ZooKeeperException
 argument_list|(
-literal|"Solr 'hostContext' has not be explicitly configured, using hardcoded default of "
-operator|+
-name|DEFAULT_HOST_CONTEXT
-operator|+
-literal|".  This default has been deprecated and will be removed in future versions of Solr, please configure this value explicitly"
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"'hostContext' must be configured to run SolrCloud"
 argument_list|)
-expr_stmt|;
-name|hostContext
-operator|=
-name|DEFAULT_HOST_CONTEXT
-expr_stmt|;
+throw|;
 block|}
-comment|// END: SOLR-4622
 comment|// zookeeper in quorum mode currently causes a failure when trying to
 comment|// register log4j mbeans.  See SOLR-2369
 comment|// TODO: remove after updating to an slf4j based zookeeper
