@@ -922,12 +922,21 @@ operator|.
 name|getProperty
 argument_list|(
 literal|"hostPort"
+argument_list|,
+literal|"8983"
 argument_list|)
 decl_stmt|;
 name|String
 name|hostContext
 init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"hostContext"
+argument_list|,
 literal|"solr"
+argument_list|)
 decl_stmt|;
 name|defaultCoreName
 operator|=
